public/notebook.css
body {
  font-family: 'Helvetica Neue', sans-serif;
  color: #333;
  background: white;
  margin: 0;
  padding: 0;
}

div.notebook {
  margin: 0 auto;
  width: 55em;
  padding: 32pt 64pt;
  min-height: 400pt;
}

@media only screen and (max-width: 800px) {
  div.notebook {
    padding: 0;
    width: 100%;
    border: none;
  }
}

a {
  color: #2A64C7;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

div.notebook h1,
div.notebook h2,
div.notebook h3 {
  font-weight: bold;
  margin: 0;
  padding: 0;
}

div.notebook h1 {
  font-size: 28pt;
  margin-bottom: 12pt;
  padding-bottom: 4pt;
  border-bottom: 3px solid rgba(0,0,0,0.125);
}

div.notebook h2 {
  font-size: 22pt;
  margin-bottom: 10pt;
  padding-bottom: 3pt;
  border-bottom: 2px solid rgba(0,0,0,0.125);
}

div.notebook h3 {
  font-size: 16pt;
  margin-bottom: 8pt;
  padding-bottom: 2pt;
}

div.notebook p {
  font-size: 12pt;
  line-height: 19pt;
  margin: 0;
  margin-bottom: 12pt;
  text-align: justify;
}

div.notebook div.codewrap {
  border: 1px solid #ddd;
  border-radius: 2px;
  background: #eee;
  padding: 8pt;
  font-size: 10pt;
  color: #000;
  margin: 0;
  margin-bottom: -1pt;
  position: relative;
}
div.notebook .yield-arrow {
  position: absolute;
  left: 48%;
  bottom: -10pt;
  width: 20pt;
}
div.notebook div.code {
  font-family: Menlo, monospace;
  white-space: pre;
  overflow: hidden;
}

div.notebook table {
  border-collapse: collapse;
  width: 100%;
  margin: 0;
  background: white;
}
div.notebook th,
div.notebook td {
  border: 1px solid #ddd;
  padding: 4pt 8pt;
  text-align: left;
  line-height: 19pt;
}
div.notebook th {
  font-size: 10pt;
  background: #f8f8f8;
}
div.notebook td {
  font-size: 12pt;
}

div.notebook div.cell {
  position: relative;
  margin-bottom: 12pt;
}

div.notebook img {
  max-width: 100%;
}

div.editor {
  position: absolute;
  z-index: 2;
  display: none;
}

div.notebook hr {
  border: 0;
  height: 3px;
  background: #ccc;
}

#addbar {
  padding-right: 12pt;
  padding-bottom: 12pt;
}
#add-prose,
#add-code {
  float: right;
  margin-left: 4pt;
  padding: 3pt 6pt;
  border: 1px solid #aaa;
  border-radius: 4px;
  box-shadow: 0 1px 0 0 rgba(0,0,0,0.2);
  font-weight: bold;
  font-size: 10pt;
  color: white;
}
#addbar a:hover {
  text-decoration: none;
}
#add-prose {
  background: #2A64C7;
  border-color: #19448C;
}
#add-code {
  background: #BA1BC5;
  border-color: #820E8A;
}

.cursor {
  transition: all .15s ease-out;
}

/*div.cursor {
  margin-left: -24pt;
  padding-left: 12pt;
  border-left: 12pt solid #2A64C7;
}

div.cursor-edit {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  border-left: 12pt solid #2A64C7;
  margin-left: -12pt;
  margin-bottom: 9pt;
}*/

div.ace_editor {
  box-sizing: border-box;
  border: 1px solid #D6F717;
  font-size: 10pt;
  margin: 0;
}
.ace-github .ace_gutter {
  background: #D6F717 !important;
}
div.ace_content {
  padding-top: 6pt;
  padding-left: 5pt;
  padding-right: 8pt;
}

div.ace_error-marker {
  background-color: #FC212C;
}

div.pyresult:before {
  content: "→ ";
}
div.pyresult {
  font-family: Menlo, monospace;
  white-space: pre;
  border: 1px solid #ccc;
  border-radius: 2px;
  background: #fff;
  padding: 8pt;
  font-size: 10pt;
  overflow: hidden;
}
div.pyresult.under-construction {
  opacity: 0.3;
}

div.plot {
  margin: 0 30px;
  margin-top: 8pt;
}

#menu {
  position: fixed;
  top: 16pt;
  left: 16pt;
  cursor: pointer;
}
#menu ul {
  list-style-type: none;
  font-size: 9pt;
  padding: 0;
}
#menu li {
  padding: 2pt 4pt;
}
#menu img {
  width: 16pt;
  height: 16pt;
  opacity: 0.5;
}

#menu .menu-content {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: 100%;
  left: 0;
  transform: translateZ(0);
  transform: translateY(-10%);
  transition: all 0.5s;
}

#menu.active .menu-content {
  visibility: visible;
  opacity: 1;
  transform: translateX(0%);
  transition-delay: 0s;
}

#menu a {
  color: #333;
  text-decoration: none;
}
#menu li:hover {
  background: #ddd;
  color: #000;
  border-radius: 2pt;
}

#upload {
  box-sizing: border-box;
  border: 6pt dashed #ccc;
  border-radius: 24pt;
  width: 300pt;
  min-height: 200pt;
  margin: 20pt auto;
  padding: 16pt;
  padding-left: 32pt;
  padding-top: 28pt;
  background: rgba(0,0,0,0.03);
  color: #888;
  font-size: 16pt;
  font-weight: bold;
}
#upload ul {
  padding-left: 16pt;
}
#upload h1 {
  font-size: 28pt;
  color: #aaa;
  border: 0;
}
#upload li {
  list-style-type: none;
  padding-left: 28pt;
  margin-bottom: 16pt;
}
#upload li.ipynb {
  background: url('file-ipynb.png') left center no-repeat;
  background-size: 15pt;
}
#upload li.csv {
  background: url('file-csv.png') left center no-repeat;
  background-size: 15pt;
}

#upload.hover {
  border: 6pt dashed #B1CD14;
}

.collaborators {
  position: fixed;
  top: 16pt;
  right: 16pt;
}
.collaborators ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}
.collaborators li {
  padding: 12pt;
  margin-bottom: 16pt;
  position: relative;
}
.collaborators li span {
  font-size: 7pt;
  font-weight: bold;
  color: #555;
  position: absolute;
  bottom: -8pt;
  left: 0;
  text-align: center;
  width: 100%;
}
.collaborators li.author {
  /*background: url('avatar-author.png') center center no-repeat;*/
  background-size: contain;
}
.collaborators li.observer {
  /*background: url('avatar-observer.png') center center no-repeat;*/
  background-size: contain;
}
.collaborators li.here {
  opacity: 1;
}
.collaborators li.arriving,
.collaborators li.departing {
  opacity: 0.3;
  animation-duration: 0.7s;
  animation-name: pulse;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

.collaborators-name-change-form-wrap {
  padding: 0;
  position: absolute;
  right: 0;
  max-height: 1000px;
  opacity: 1;
  overflow: inherit; 
  top: 55px; /* magic number */

  transition: all .5s ease-out;
}

.collaborators-name-change-form-wrap-hidden {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: all .5s ease-in;
}

.collaborators-name-change-form {
  background: #ddd;
  border: solid 2px #959595;
  border-radius: 4px;
  min-width: 200px;
  padding: .4em .5em .8em .5em;
  position: relative;
  z-index: 2;
}



.collaborators-name-change-form::after {
  background: #ddd;
  border-left: solid 2px #959595;
  border-top: solid 2px #959595;
  content: ' ';
  height: 15px;
  position: absolute;
  right: 7px;
  top: 0;
  transform: translateY(-10.6px) rotate(45deg);
  width: 15px;
}

.collaborators-name-change-form p {
  font-size: .85em;
  margin: .3em;
}

.collaborators-name-change-form input {
  width: 72%;
}

.collaborators-name-change-form button {
  display: inline-block;
  margin-left: 4pt;
  width: 20%;
}

.observer:first-of-type {
  cursor: pointer;
}

.observer:not(:first-of-type) {
  opacity: .82;
}


@keyframes pulse {
  from {
    opacity: 0.3;
  }
  to {
    opacity: 0.7;
  }
}


div.ace_editor {
  border: none;
}

/* specificity necessary to override injected styles */
div.ace-github,
div.ace-content {
  background: #eee;
}

div.pyresult-error {
  background-color: #FC212C;
  color: white;
}
div.pyresult-error::before {
  content: '';
}
div.pyresult-error {
  background-image: url('/bang.png');
  background-repeat: no-repeat;
  background-position: 6pt 4pt;
  background-size: 20pt;
  padding-left: 32pt;
  box-shadow: inset 2pt 4pt 6pt 0 rgba(0,0,0,0.1);
}

.blur {
  -webkit-filter: blur(5px);
  filter: blur(5px);

  transition: -webkit-filter .25s ease-in-out,
              filter .25s ease-in-out;
}

